syntax = "proto2";

package frankenpaxos.craq;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.craq"
  flat_package: true
};

message UniformReadWriteWorkloadProto {
  required int32 num_keys = 1;
  required float read_fraction = 2;
  required int32 write_size_mean = 3;
  required int32 write_size_std = 4;
}

message PointSkewedReadWriteWorkloadProto {
  required int32 num_keys = 1;
  required float read_fraction = 2;
  required float point_fraction = 3;
  required int32 write_size_mean = 4;
  required int32 write_size_std = 5;
}

message ReadWriteWorkloadProto {
  oneof value {
    UniformReadWriteWorkloadProto uniform_read_write_workload = 1;
    PointSkewedReadWriteWorkloadProto point_skewed_read_write_workload = 2;
  }
}
